Increasing min-height to ensure the empty container retains its correct spacing

--- a/sass/includes/_hierarchy-global-nav.scss
+++ b/sass/includes/_hierarchy-global-nav.scss
@@ -190,7 +190,7 @@
       background-color: $color__yellow-dark;
       padding: 0.5rem 0.75rem;
       display: inline-block;
-      min-height: 60px;
+      min-height: 75px;
       border: 2px solid $color__yellow;
       border-left: 0;
       width: 11.5%;
